# td_get_water_lever_phase2

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: app.c  app.h  app_config.h
main/board/: board.c  board.h
main/board/gpio/: gpio_hw.c  gpio_hw.h
main/board/ioe_hw/: ioe_hw.c  ioe_hw.h
main/board/nvc_flash/: hw_flash.c  hw_flash.h
main/board/timer/: drv_timer.c  drv_timer.h
main/board/uart_hw/: huart.c  huart.h
main/components/EC200/: EC200.cpp  EC200.h
main/components/button/: button.c  button.h
main/components/buzzer/: buzzer.c  buzzer.h
main/components/file_storage/: file_storage.c  file_storage.h
main/components/ioe/: ioe.c  ioe.h
main/components/lte_network/: lte_network.c  lte_network.h
main/components/mywifi/: my_wifi.c  my_wifi.h
main/html_source/: chart.html  highcharts.js  index.html
main/service/svc_ota/: svc_ota.c  svc_ota.h
